[gd_scene load_steps=3 format=3 uid="uid://cbpb7k4y2h0f2"]

[ext_resource type="Script" path="res://start_menu/start_menu.gd" id="1_q6fqx"]
[ext_resource type="PackedScene" uid="uid://c2vpknecl4bdb" path="res://levels/starter_town/level.tscn" id="2_ws7ut"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q6fqx")
new_game_scene = ExtResource("2_ws7ut")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.619608, 0.788235, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Start New Game"

[node name="ContinueButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Continue"

[node name="SettingButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Setting"

[node name="ExitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="ColorRect/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
